--- a/app/modules/FoodsModule/templates/Foods/show.latte
+++ b/app/modules/FoodsModule/templates/Foods/show.latte
@@ -25,14 +25,16 @@
 			<ul class="clearing-thumbs clearing-feature" data-clearing>
 				{foreach $food->related('foods_pictures') as $picture}
 					<li 
-						{if 1 == $iterator->counter}
+						{if $iterator->isFirst()}
 							class="clearing-featured-img"
 						{/if}
 						
-						{if $iterator->counter>1 && $iterator->counter<4}
+						{if $iterator->counter > 1 && $iterator->counter < 4}
 							class="clearing-featured-img small"
 						{/if}
-						><a href="{substr($picture->file->filename, strlen(WWW_DIR))}" ><img src="{substr($picture->file->filename, strlen(WWW_DIR))}" /></a></li>
+						>
+							<a href="{substr($picture->file->filename, strlen(WWW_DIR))}" ><img src="{substr($picture->file->filename, strlen(WWW_DIR))}" /></a>
+					</li>
 				{/foreach}
 			</ul>
 			<hr class="show-for-small" />
