--- a/app/modules/FoodsModule/templates/Foods/show.latte
+++ b/app/modules/FoodsModule/templates/Foods/show.latte
@@ -51,7 +51,6 @@
 				<hr>
 			</div>
 				
-		
 			<div class="row">
 				<h5>Ingredients:</h5>
 				<ul class="disc indented">
@@ -64,9 +63,6 @@
 				</ul>
 				<hr>
 			</div>
-		
-
-		
 				
 			<div class="row">
 				<h5>Tags:</h5>
@@ -75,10 +71,34 @@
 					<a n:href="Foods:list tags => $tag->id_tag" class="round-marker">{$tag->tag->tag}</a>
 				{/foreach}
 				</span>
+				<hr>
 			</div>	
+				
+			<div class="row">
+				<h5>Comments:</h5>
+				<div class="large-12 columns">
+					{snippet comments}
+						{foreach $food->related('comments') as $comment}
+							<div class="row">
+								<blockquote>
+									<p>{$comment->comment->comment}</p>
+									<footer>{$comment->comment->user->username}<span class="hideable"> ({$comment->comment->added_at})</span></footer>
+								</blockquote>
+							</div>
+						{/foreach}
+					
+				
+						<div class="row">
+							{form addCommentForm}
+								{input food_comment}
+								{input save_comment}
+							{/form}
+						</div>
+					{/snippet}
+				</div>
+			</div>
 	</div>
 </div>
-
 {/block}
 
 
