--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -194,7 +194,7 @@ blockquote:hover>footer>span.hideable{
 	margin-right: auto;
 }
 
-.user-actions {
+.actions {
 	text-align: center;
 	width: 10%;
 }
