--- a/app/modules/FoodsModule/templates/Foods/show.latte
+++ b/app/modules/FoodsModule/templates/Foods/show.latte
@@ -44,7 +44,7 @@
 	<div class="large-8 columns">
 		
 			<div class="row">
-				<h5>Description:</h5>
+				<h5><i class="icon-align-left icon-large"></i> Description:</h5>
 				<span id="description" class="indented">
 					{!$food->description|nl2br}
 				</span>
@@ -52,7 +52,7 @@
 			</div>
 				
 			<div class="row">
-				<h5>Ingredients:</h5>
+				<h5><i class="icon-beaker icon-large"></i> Ingredients:</h5>
 				<ul class="disc indented">
 				{foreach $food->related('ingredients')->order('id_food_ingredient') as $ingredient}
 					<li>
@@ -65,7 +65,7 @@
 			</div>
 				
 			<div class="row">
-				<h5>Tags:</h5>
+				<h5><i class="icon-tags icon-large"></i> Tags:</h5>
 				<span class="indented">
 				{foreach $food->related('tags')->order('id_food_tag') as $tag}
 					<a n:href="Foods:list tags => $tag->id_tag" class="round-marker">{$tag->tag->tag}</a>
@@ -75,7 +75,7 @@
 			</div>	
 			
 			<div class="row">
-				<h5>Comments:</h5>
+				<h5><i class="icon-comments icon-large"></i> Comments:</h5>
 				<div class="large-12 columns">
 					{snippet comments}
 						{foreach $food->related('comments') as $comment}
