Uploading image creates thumbnail, small css changes

--- a/app/modules/FoodsModule/templates/Foods/show.latte
+++ b/app/modules/FoodsModule/templates/Foods/show.latte
@@ -33,7 +33,8 @@
 							class="clearing-featured-img small"
 						{/if}
 						>
-							<a href="{substr($picture->file->filename, strlen(WWW_DIR))}" ><img src="{substr($picture->file->filename, strlen(WWW_DIR))}" /></a>
+							<a href="{substr($picture->file->filename, strlen(WWW_DIR))}" >
+								<img src="{substr($picture->thumbnail_path, strlen(WWW_DIR))}" /></a>
 					</li>
 				{/foreach}
 			</ul>
