--- a/app/modules/FoodsModule/templates/Foods/list.latte
+++ b/app/modules/FoodsModule/templates/Foods/list.latte
@@ -22,6 +22,10 @@
 		</td>
 		<td>
 			{foreach $food->related('tags') as $tag}
+				{if $iterator->getCounter() == 4}
+					 ...
+				{/if}
+				{breakIf $iterator->getCounter() == 4}
 				<a n:href="Foods:list tags => $tag->id_tag" class="round-marker">{$tag->tag->tag}</a>
 			{/foreach}
 		</td>
