--- a/www/css/custom.css
+++ b/www/css/custom.css
@@ -171,6 +171,7 @@ th>label {
 li.clearing-featured-img.small {
 	width: 48%;
 	display:inline-block;
+	margin-top: 3px;
 }
 
 blockquote>footer {
@@ -193,6 +194,7 @@ blockquote:hover>footer>span.hideable{
 .clearing-thumbs img {
 	margin-left: auto;
 	margin-right: auto;
+	width: 100%;
 }
 
 .actions {
