--- a/app/modules/FoodsModule/templates/Foods/show.latte
+++ b/app/modules/FoodsModule/templates/Foods/show.latte
@@ -9,14 +9,26 @@
   <a class="close-reveal-modal">&#215;</a>
 </div>
 
+{snippet headline section}
 <div class="large-12 columns food-headline">
 			<h3>{ucfirst($food->food)} <span id="food-author">by <a n:href="Foods:list id_user => $food->user->id_user">{$food->user->username}</a></span>
 			{if $hasOwnerPrivilege}
 				<a href="#" title="Delete this food" data-reveal-id="delete-modal" class="action"><i class="icon-trash icon-large"></i></a>
 				<a class="action" n:href="edit id => $food->id_food"><i class="icon-pencil icon-large"></i></a>
 			{/if}
+			{if $user->isLoggedIn()}
+
+                    <a class="action" n:href="copy id => $food->id_food"><i class="icon-copy icon-large"></i></a>
+                    {if !$is_favourite}
+                        <a class="action ajax" title="Favourite food" n:href="favourite! id => $food->id_food"><i class="icon-star-empty icon-large"></i></a>
+                    {/if}
+                    {if $is_favourite}
+                        <a class="action ajax" title="Unfavourite food" n:href="unfavourite! id => $food->id_food"><i class="icon-star icon-large"></i></a>
+                    {/if}
+			{/if}
 			</h3>
 </div>
+{/snippet}
 
 <div class="large-12 columns">
 	{if $food->related('foods_pictures')->count()}
@@ -75,10 +87,16 @@
 				{/foreach}
 				</span>
 				<hr>
-			</div>	
-			
+			</div>
+
+
 			<div class="row">
-				<h5><i class="icon-comments icon-large"></i> Comments:</h5>
+				<h5>
+                    <i class="icon-comments icon-large"></i> Comments:
+                    {if !$food->related('comments')->count()}
+                        <span class="less-important">No Comments  yet</span>
+                    {/if}
+                </h5>
 				<div class="large-12 columns">
 					{snippet comments}
 						{foreach $food->related('comments') as $comment}
@@ -89,7 +107,7 @@
 								</blockquote>
 							</div>
 						{/foreach}
-					
+
 						{if $user->isLoggedIn()}
 						<div class="row">
 							{form addCommentForm}
@@ -101,6 +119,7 @@
 					{/snippet}
 				</div>
 			</div>
+
 	</div>
 </div>
 {/block}
