Translator mockup added

--- a/app/modules/FoodsModule/templates/Foods/categories.latte
+++ b/app/modules/FoodsModule/templates/Foods/categories.latte
@@ -3,10 +3,10 @@
 <table id="foods-list">
 	<thead>
 		<th>
-			Category
+			{_}Category{/_}
 		</th>
 		<th>
-			Number of foods
+            {_}Number of foods{/_}
 		</th>
 	</thead>
 {foreach $categories as $category}
