--- a/app/modules/FoodsModule/templates/Foods/list.latte
+++ b/app/modules/FoodsModule/templates/Foods/list.latte
@@ -4,10 +4,10 @@
 <table id="foods-list">
 	<thead>
 		<th>
-			<a n:href="this order_by => food">Food</a>
+			<a n:href="this order_by => food">{_"Food"}</a>
 		</th>
 		<th>
-			<a n:href="this order_by => id_user">User</a>
+			<a n:href="this order_by => id_user">   User</a>
 		</th>
 		<th>
 			Tags
